--- a/src/main/resources/public/index/img.html
+++ b/src/main/resources/public/index/img.html
@@ -5,5 +5,5 @@
         var str = window.location.search;
         return (str.match(new RegExp('(?:[\?#&$])'+name+'=([^&#$]*)','i'))||[])[1]||'';
     }
-    $("#img-div").html('<img src="/api/v1/activitiImg?proInstanceId='+$("#img").attr("proInstanceId")+'">')
+    $("#img-div").html('<img src="/api/v1/activitiImg?proInstanceId='+$("#img").attr("proInstanceId")+'&r='+Math.ceil(Math.random()*1000)+'">')
 </script>
