--- a/src/main/resources/public/index/majordomoList.html
+++ b/src/main/resources/public/index/majordomoList.html
@@ -19,11 +19,18 @@
 </div>
 <script>
 
-    function AFLeaveAgree(id){
+    function AFLeaveAgree2(id, proInstanceId){
+        var data = {
+            id: id,
+            proInstanceId: proInstanceId,
+            approverName: '总监001',
+            approverResult: 1,
+            approverRemark: '总监001同意'
+        }
         $.ajax({
             type: 'post',
             url: '/api/v1/askForLeave/AFLeaveAgree',
-            data: {id:id},
+            data: data,
             success: function(data) {
                 if(data.code == "2000"){
                     alert("操作成功")
@@ -55,7 +62,7 @@
                         tbodyHtml += "<th>"+el.endDate+"</th>";
                         tbodyHtml += "<th>"+el.day+"</th>";
                         tbodyHtml += "<th>"+el.createDate+"</th>";
-                        tbodyHtml += "<th>"+'<button onclick="AFLeaveAgree('+el.id+')" type="button" class="btn btn-success">同意</button>'+"</th>";
+                        tbodyHtml += "<th>"+'<button onclick="AFLeaveAgree2('+el.id+','+el.proInstanceId+')" type="button" class="btn btn-success">同意</button>'+"</th>";
                         tbodyHtml += "</tr>";
                     }
                     $("#subAList-tbody").html(tbodyHtml)
