--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -64,6 +64,7 @@
           <button id="manager" type="button" class="btn btn-primary load-html" data-html="/index/managerList.html">经理审批列表</button>
           <button id="majordomo" type="button" class="btn btn-info load-html" data-html="/index/majordomoList.html">总监审批列表</button>
           <button id="img" type="button" class="btn btn-success">查看实例跟踪图</button>
+          <button id="skipNode" type="button" class="btn btn-primary load-html" data-html="/index/skipNode.html">节点跳转</button>
           <button id="queryProInstance" type="button" class="btn btn-default">查看实例当前进度</button>
           <div id="resData">
           </div>
